kubernetes_yaml/django-deployment.yaml_bkp_new.yaml
kind: Service
apiVersion: v1
metadata:
  name: django-web-srvc
spec:
  type: NodePort
  ports:
    - port: 8000
     # targetPort: 3000
     # protocol: TCP
      nodePort: 32000
  selector:
    app: django

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: django
        tier: frontend
    spec:
      containers:
      - image: jeetbisht91/django:latest
        name: django
        ports:
        - containerPort: 8000
          name: django
