kubernetes_yaml/newingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
 # annotations:
 #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 # ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: django-web-srvc
            port:
              number: 8000
